tests/errors/str_no_method.vt
fn main() { print("x".zap()); }
